--- a/_includes/body/comments.html
+++ b/_includes/body/comments.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
 
 {% if page.comments %}
 <aside class="comments related" role="complementary">
@@ -8,17 +7,25 @@
 </aside>
 
 <!-- 加载gitalk -->
-<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
-<script>
-  var gitalk = new Gitalk({
-    clientID: '{{site.gitalk_clientid}}',
-    clientSecret: '{{site.gitalk_secret}}',
-    repo: '{{site.gitalk_repo}}',
-    owner: '{{site.gitalk_owner}}',
-    admin:'{{site.gitalk_admin}}',
-    id: location.pathname,     
-    distractionFreeMode: '{{site.gitalk_dfm}}'  
-  })
-  gitalk.render('git_thread')
-</script>
+<link rel="stylesheet" href="/assets/css/gitalk.css">
+<script src="/assets/js/gitalk.min.js"></script>
+<!-- Gitalk 评论 start  -->
+<div id="gitalk-container"></div>
+    <script type="text/javascript">
+    var title = location.pathname.substr(0, 50);//截取路径的前50个字符作为标识符
+    var gitalk = new Gitalk({
+
+    // gitalk的主要参数
+        clientID: `1e3ecd59274587087a72`,
+        clientSecret: `341d36b5e98c8844089259539a2cff2477d572f2`,
+        repo: `Alfred-Alan.github.io`,
+        owner: 'Alfred-Alan',
+        admin: ['Alfred-Alan'],
+        id: title,//因为这里不能超过50字符，所以做了处理，当超过50时自动截取前50
+    
+    });
+    gitalk.render('gitalk-container');
+    </script>
+<!-- Gitalk end -->
+
 {% endif %}
