--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,8 +19,31 @@ layout: base
 
 {% include components/post.html post=page no_link_title=true no_excerpt=true hide_image=page.hide_image %}
 
-<hr class="dingbat related" />
+<link rel="stylesheet" href="{{ "/assets/css/share.min.css" | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/css/app.min.css" | relative_url }}">
+<!-- 分享 -->
+{% if site.social-share %}
+<div class="social-share-wrapper">
+  <div class="social-share"></div>
+</div>
+{% endif %}
 
+<script src="{{ "/assets/js/social-share.min.js" | relative_url }}"></script>
+<script>
+  socialShare('.social-share', {
+    sites: [
+      {% for i in site.social-share-items %}
+        '{{ i }}'
+        {% if forloop.last == false %},
+        {% endif %}
+      {% endfor %}
+    ],
+    wechatQrcodeTitle: "分享到微信朋友圈",
+    wechatQrcodeHelper: '<p>扫码后点击右上角</p><p>将本文分享至朋友圈</p>'
+  });
+</script>
+<br>
+<hr class="dingbat related"/>
 {% assign addons = page.addons | default:site.hydejack.post_addons %}
 {% unless addons %}{% assign addons = "about,newsletter,related,random" | split:"," %}{% endunless %}
 {% for addon in addons %}
