--- a/_includes/body/comments.html
+++ b/_includes/body/comments.html
@@ -7,9 +7,10 @@
 </aside>
 
 <!-- 加载gitalk -->
-<link rel="stylesheet" href="/assets/css/gitalk.css">
+
+<!-- <link rel="stylesheet" href="/assets/css/gitalk.css">
 <script src="/assets/js/gitalk.min.js"></script>
-<!-- Gitalk 评论 start  -->
+
 <div id="gitalk-container"></div>
     <script type="text/javascript">
     var title = location.pathname.substr(0, 50);//截取路径的前50个字符作为标识符
@@ -25,7 +26,8 @@
     
     });
     gitalk.render('gitalk-container');
-    </script>
+    </script> -->
+
 <!-- Gitalk end -->
 
 {% endif %}
