--- a/#jekyll-theme-hydejack/_includes/head/scripts.html
+++ b/#jekyll-theme-hydejack/_includes/head/scripts.html
@@ -18,3 +18,25 @@
 {% if site.kramdown.math_engine == 'mathjax' %}
 <script async src="{{ 'assets/bower_components/MathJax/es5/tex-mml-chtml.js' | relative_url }}" id="_MathJax"></script>
 {% endif %}
+
+<script>
+//监听触发操作
+function hashChangeFire(){
+    alert("1231561")
+}
+
+//url变化监听器
+if( ('onhashchange' in window) && ((typeof document.documentMode==='undefined') || document.documentMode==8)) {
+    // 浏览器支持onhashchange事件
+    window.onhashchange = hashChangeFire;  // TODO，对应新的hash执行的操作函数
+} else {
+    // 不支持则用定时器检测的办法
+    setInterval(function() {
+        // 检测hash值或其中某一段是否更改的函数， 在低版本的iE浏览器中通过window.location.hash取出的指和其它的浏览器不同，要注意
+        var ischanged = isHashChanged();
+        if(ischanged) {
+            hashChangeFire();  // TODO，对应新的hash执行的操作函数
+        }
+    }, 150);
+}  
+</script>
