--- a/#jekyll-theme-hydejack/_includes/my-comments.html
+++ b/#jekyll-theme-hydejack/_includes/my-comments.html
@@ -71,9 +71,9 @@
           pageSize: {{valine.pageSize | defalut:10}},
           recordIP:  {{valine.recordIP}},
           requiredFields: ['nick', 'mail'],
-          // 设置Bilibili表情包地址
+          /* 设置Bilibili表情包地址*/
           emojiCDN: '//i0.hdslb.com/bfs/emote/', 
-          // 表情title和图片映射
+          /* 表情title和图片映射*/
           emojiMaps: JSON.parse(request.responseText)
         });
       }
