--- a/#jekyll-theme-hydejack/_includes/my-comments.html
+++ b/#jekyll-theme-hydejack/_includes/my-comments.html
@@ -57,12 +57,11 @@
   <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
   <script>
     window.onload = function() {
-      var url = "/assets/js/emoji.json"/*json文件url，本地的就写本地的位置，如果是服务器的就写服务器的路径*/
       var request = new XMLHttpRequest();
-      request.open("get", url);/*设置请求方法与路径*/
-      request.send(null);/*不发送数据到服务器*/
-      request.onload = function () {/*XHR对象获取到返回信息后执行*/
-        if (request.status == 200) {/*返回状态为200，即为数据获取成功*/
+      request.open("get", "/assets/js/emoji.json");
+      request.send(null);
+      request.onload = function () {
+        if (request.status == 200) {
           new Valine({
             el: '#valinecomments',
             app_id: '{{valine.app_id}}',
