--- a/#jekyll-theme-hydejack/_includes/my-comments.html
+++ b/#jekyll-theme-hydejack/_includes/my-comments.html
@@ -32,7 +32,7 @@
 <script type="text/javascript">
   var disq = new iDisqus('comment', {
       forum: 'alfred-alan',
-      api: 'http://www.alfred-alan.online/',
+      api: 'https://www.alfred-alan.online/',
       site: 'https://www.alfred-alan.online/',
       url: location.pathname,
       mode: 1,
