--- a/#jekyll-theme-hydejack/_includes/my-comments.html
+++ b/#jekyll-theme-hydejack/_includes/my-comments.html
@@ -24,15 +24,35 @@
     }
   }
 }(window, document);</script> -->
+
+<!-- <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://alfred-alan.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> -->
+
 <script type="text/javascript" src="/assets/js/iDisqus.min.js"></script>  
 <link rel="stylesheet" type="text/css" href="/assets/css/iDisqus.min.css" />
 
-<!-- <a href="index.html#disqus_thread" data-disqus-identifier=""></a> -->
 <div id="comment"></div>
 <script type="text/javascript">
   var disq = new iDisqus('comment', {
       forum: 'alfred-alan',
-      api: 'https://www.alfred-alan.online/',
+      api: 'https://www.alfred-alan.online/disqus/',
       site: 'https://www.alfred-alan.online/',
       url: location.pathname,
       mode: 3,
