--- a/#jekyll-theme-hydejack/_includes/my-comments.html
+++ b/#jekyll-theme-hydejack/_includes/my-comments.html
@@ -24,8 +24,8 @@
     }
   }
 }(window, document);</script> -->
-
-<!-- <div id="disqus_thread"></div>
+<!-- 
+<div id="disqus_thread"></div>
 <script>
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -45,7 +45,7 @@
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> -->
 
-<script type="text/javascript" src="/assets/js/iDisqus.min.js"></script>  
+<!-- <script type="text/javascript" src="/assets/js/iDisqus.min.js"></script>  
 <link rel="stylesheet" type="text/css" href="/assets/css/iDisqus.min.css" />
 
 <div id="comment"></div>
@@ -60,7 +60,7 @@
       init: true,
     });
   disq.count();
-</script>
+</script> -->
 
 {% endif %}
 
