--- a/#jekyll-theme-hydejack/_includes/my-comments.html
+++ b/#jekyll-theme-hydejack/_includes/my-comments.html
@@ -83,6 +83,7 @@
         body:  '文章链接：'+ decodeURIComponent(location.origin+location.pathname),
         adminUser: '{{gitalk.username}}', 
         distractionFreeMode: true, 
+        proxy: '/github/login/oauth/access_token' // 新添加的
     });
     gitalk_obj.render('gitalk-container');    
   </script>
