--- a/#jekyll-theme-hydejack/_includes/components/post.html
+++ b/#jekyll-theme-hydejack/_includes/components/post.html
@@ -62,10 +62,10 @@
     {% include components/message.html text=post.description hide=hide_description alt=alt %}
   </header>
 
-  {% if no_excerpt %}
+  <!-- {% if no_excerpt %}
     {{ post.content }}
   {% else %}
-    {{ post.excerpt }}
+    {{ post.excerpt }} -->
 
     {% capture post_title %}<a class="heading flip-title" href="{{ post.url | relative_url }}">{{ post.title }}</a>{% endcapture %}
     {% assign text = site.data.strings.continue_reading | default:"Continue reading <!--post_title-->" %}
