--- a/#jekyll-theme-hydejack/_includes/components/post.html
+++ b/#jekyll-theme-hydejack/_includes/components/post.html
@@ -61,11 +61,11 @@
 
     {% include components/message.html text=post.description hide=hide_description alt=alt %}
   </header>
-
-  <!-- {% if no_excerpt %}
+  {{ no_excerpt }}
+  {% if no_excerpt %}
     {{ post.content }}
   {% else %}
-    {{ post.excerpt }} -->
+    {{ post.excerpt }}
 
     {% capture post_title %}<a class="heading flip-title" href="{{ post.url | relative_url }}">{{ post.title }}</a>{% endcapture %}
     {% assign text = site.data.strings.continue_reading | default:"Continue reading <!--post_title-->" %}
