--- a/#jekyll-theme-hydejack/_includes/components/post.html
+++ b/#jekyll-theme-hydejack/_includes/components/post.html
@@ -63,8 +63,10 @@
   </header>
   {{ no_excerpt }}
   {% if no_excerpt %}
+    <h3>no_excerpt error</h3>
     {{ post.content }}
   {% else %}
+    <h3>print excerpt</h3>
     {{ post.excerpt }}
 
     {% capture post_title %}<a class="heading flip-title" href="{{ post.url | relative_url }}">{{ post.title }}</a>{% endcapture %}
