--- a/#jekyll-theme-hydejack/_includes/my-head.html
+++ b/#jekyll-theme-hydejack/_includes/my-head.html
@@ -10,4 +10,8 @@ Fallback in case JavaScript isn't enabled.
 Fill in `href`. You may have to adjust `rel`.
 -->
 <noscript><link href="<path/to/content.css>" rel="stylesheet"></noscript>
+
+<!-- google search -->
+<meta name="google-site-verification" content="4guCFfTeOZ0D_Bp97bTwR4NGDUwFHEb2ocb5Zf81tuA" />
+
 {% endcomment %}
