add google search

--- a/#jekyll-theme-hydejack/_includes/head/meta.html
+++ b/#jekyll-theme-hydejack/_includes/head/meta.html
@@ -2,6 +2,10 @@
   <meta name="robots" content="noindex">
 {% endif %}
 
+
+<!-- google search -->
+<meta name="google-site-verification" content="4guCFfTeOZ0D_Bp97bTwR4NGDUwFHEb2ocb5Zf81tuA" />
+
 {% unless page.redirect %}
   {% if plugins contains 'jekyll-seo-tag' %}
     {% include head/seo-tag.html %}
